--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+
+html{
+  scroll-behavior: smooth;
+}
 .App {
   text-align: center;
   font-family: 'Courier New', monospace;
@@ -14,16 +18,7 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
